# lib/api-spec/openapi.yaml
@@ -344,6 +344,10 @@ paths:
           in: query
           schema:
             type: integer
+        - name: interviewId
+          in: query
+          schema:
+            type: integer
       responses:
         "200":
           description: Questions list
@@ -946,6 +950,7 @@ components:
           items:
             type: object
             additionalProperties: true
+
 
 
 
